4-Kubernetes-I/6-Services_and_Networking/2-Ingress/Ingress-Practice/3-TLS/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shanana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - site1.shananadevops.xyz
    secretName: site1-tls-secret
  - hosts:
    - site2.shananadevops.xyz
    secretName: site2-tls-secret
  rules:
  - host: site1.shananadevops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-nginx-svc
            port:
              number: 80
  - host: site2.shananadevops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-nginx-svc
            port:
              number: 80
